--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="images/Logo/favicon.png">
+    <!-- custom css -->
     <link rel="stylesheet" href="style.css">
 </head>
 
